<resources>
    <string name="app_name">Manajemen Data Mahasiswa</string>
    <string name="title_data_mahasiswa">Data Mahasiswa</string>
    <string name="subtitle_data_mahasiswa">Kelola data NRP, Nama, Jurusan, Fakultas, dan No HP</string>

    <string name="title_pencarian">Pencarian Mahasiswa</string>
    <string name="title_detail_data">Detail Data Mahasiswa</string>
    <string name="label_search_nrp">Cari NRP (10 digit)</string>

    <string name="label_nrp">NRP (10 Digit)</string>
    <string name="label_nama">Nama Lengkap</string>
    <string name="label_jurusan">Jurusan / Program Studi</string>
    <string name="label_fakultas">Fakultas</string>
    <string name="label_no_hp">Nomor HP / WhatsApp</string>

    <string name="btn_simpan">Simpan Baru</string>
    <string name="btn_cari">Cari</string>
    <string name="btn_update">Update Data</string>
    <string name="btn_hapus">Hapus Data</string>
    <string name="btn_clear">Reset Form</string>
</resources>
